cmake_minimum_required(VERSION 3.21)
project(Project_final)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_final main.cpp Multime.h Multime.cpp Iterator.cpp Iterator.h Utilizator.cpp Utilizator.h Mesaj.cpp Mesaj.h Prieteni.cpp Prieteni.h Multidictionar.h Multidictionar.cpp RepoFile.cpp RepoFile.h Service.cpp Service.h Ui.cpp Ui.h Retea.cpp Retea.h)
